--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
         "git-get-version-from-git": "app_version=$(npm run git-count-commit | sed '$!d') && [ $(expr $app_version : '[0-9]*$') -gt 0 ] && app_version=${npm_package_config_app_version_prefix}.${tom_version} && [ -z \"$VERSION_POSTFIX\" ] && echo 'Variable VERSION_POSTFIX not setted' || app_version=$app_version-$VERSION_POSTFIX && app_version_hash=$(git log -n 1 --pretty=format:%H) && npm config set app_version $app_version && npm config set appversion_hash $app_version_hash"
     },
     "dependencies": {
-        "@api-platform/admin": "^0.6.2",
+        "@api-platform/admin": "^0.6.3",
         "@rebolon/json-reviver": "^0.0.9",
         "apollo-cache-inmemory": "^1.5.1",
         "apollo-client": "^2.5.1",
@@ -66,8 +66,9 @@
         "prop-types": "^15.7.2",
         "quasar-extras": "^1.0.3",
         "quasar-framework": "^0.15.15",
-        "react": "^16.8.3",
-        "react-dom": "^16.8.3",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-scripts": "^3.0.1",
         "rxjs": "^6.4.0",
         "uglifyjs-webpack-plugin": "^2.1.2",
         "vue": "^2.6.8",
@@ -81,7 +82,7 @@
         "@babel/preset-react": "^7.0.0",
         "@symfony/webpack-encore": "^0.24.0",
         "bootstrap": "^4.3.1",
-        "create-react-app": "^1.5.2",
+        "create-react-app": "^3.0.1",
         "jasmine": "^3.3.1",
         "karma": "^4.0.1",
         "karma-chrome-launcher": "^2.2.0",
@@ -90,7 +91,7 @@
         "karma-jasmine-html-reporter": "^1.4.0",
         "karma-junit-reporter": "^1.2.0",
         "karma-spec-reporter": "0.0.32",
-        "karma-webpack": "^3.0.5",
+        "karma-webpack": "3.0.0",
         "node-sass": "^4.11.0",
         "prettier": "^1.16.4",
         "rxjs-tslint": "^0.1.7",
