--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "symfony/dom-crawler": "~4.1",
         "symfony/dotenv": "~4.1",
         "symfony/flex": "^1.2.0",
+        "symfony/maker-bundle": "^1.12",
         "symfony/test-pack": "^1.0",
         "symfony/webpack-encore-pack": "^1.0.3"
     },
