--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-json": "*",
         "ext-pdo": "*",
         "ext-pdo_sqlite": "*",
+        "api-platform/admin-pack": "^1.0",
         "api-platform/api-pack": "^1.2.0",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "easycorp/easyadmin-bundle": "^2.1.1",
