--- a/composer.json
+++ b/composer.json
@@ -9,35 +9,34 @@
         "ext-pdo_sqlite": "*",
         "api-platform/admin-pack": "^1.0",
         "api-platform/api-pack": "^1.2.0",
-        "doctrine/doctrine-migrations-bundle": "^2.0",
-        "easycorp/easyadmin-bundle": "^2.1.1",
-        "lexik/jwt-authentication-bundle": "^2.5.4",
-        "ocramius/proxy-manager": "2.1.*",
+        "doctrine/doctrine-migrations-bundle": "^2.1",
+        "easycorp/easyadmin-bundle": "^2.3",
+        "lexik/jwt-authentication-bundle": "^2.6",
+        "ocramius/proxy-manager": "^2.7",
         "rebolon/api-json-param-converter": "^1.3.2",
-        "sensio/framework-extra-bundle": "^5.2.4",
-        "symfony/console": "~4.1",
-        "symfony/framework-bundle": "~4.1",
-        "symfony/http-client": "~4.1",
-        "symfony/monolog-bundle": "^3.3.0",
+        "sensio/framework-extra-bundle": "^5.",
+        "symfony/console": "~4.4",
+        "symfony/framework-bundle": "~4.4",
+        "symfony/http-client": "~4.4",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/profiler-pack": "~1.0",
-        "symfony/webpack-encore-bundle": "^1.2",
-        "symfony/yaml": "~4.1",
+        "symfony/webpack-encore-bundle": "^1.7",
+        "symfony/yaml": "~4.4",
         "webonyx/graphql-php": "^0.13"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.0.4",
-        "friendsofphp/php-cs-fixer": "^2.13.1",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "friendsofphp/php-cs-fixer": "^2.16",
         "roave/security-advisories": "dev-master",
-        "sensiolabs/security-checker": "~5.0.3",
-        "squizlabs/php_codesniffer": "^3.3.2",
-        "symfony/browser-kit": "~4.1",
-        "symfony/css-selector": "~4.1",
-        "symfony/dom-crawler": "~4.1",
-        "symfony/dotenv": "~4.1",
-        "symfony/flex": "^1.2.0",
-        "symfony/maker-bundle": "^1.12",
-        "symfony/test-pack": "^1.0",
-        "symfony/webpack-encore-pack": "^1.0.3"
+        "sensiolabs/security-checker": "~6.0",
+        "squizlabs/php_codesniffer": "^3.5",
+        "symfony/browser-kit": "~4.4",
+        "symfony/css-selector": "~4.4",
+        "symfony/dom-crawler": "~4.4",
+        "symfony/dotenv": "~4.4",
+        "symfony/flex": "^1.6",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/test-pack": "^1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
