Update to Sf4.4 (before upgrade to sf 5) and fix all code stylish

--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,14 @@
         "doctrine/doctrine-migrations-bundle": "^2.1",
         "easycorp/easyadmin-bundle": "^2.3",
         "lexik/jwt-authentication-bundle": "^2.6",
-        "ocramius/proxy-manager": "^2.7",
+        "ocramius/proxy-manager": "^2.2.3",
         "rebolon/api-json-param-converter": "^1.3.2",
         "sensio/framework-extra-bundle": "^5.",
         "symfony/console": "~4.4",
         "symfony/framework-bundle": "~4.4",
         "symfony/http-client": "~4.4",
         "symfony/monolog-bundle": "^3.5",
+        "symfony/panther": "^0.7.0",
         "symfony/profiler-pack": "~1.0",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "~4.4",
