--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,21 @@
         "ext-pdo": "*",
         "ext-pdo_sqlite": "*",
         "api-platform/admin-pack": "^1.0",
-        "api-platform/api-pack": "^1.2.0",
-        "doctrine/doctrine-migrations-bundle": "^2.1",
-        "easycorp/easyadmin-bundle": "^2.3",
-        "lexik/jwt-authentication-bundle": "^2.6",
+        "api-platform/api-pack": "^1.2.1",
+        "doctrine/doctrine-migrations-bundle": "^2.1.2",
+        "easycorp/easyadmin-bundle": "^2.3.5",
+        "lexik/jwt-authentication-bundle": "^2.6.5",
         "ocramius/proxy-manager": "^2.2.3",
-        "rebolon/api-json-param-converter": "^1.3.2",
-        "sensio/framework-extra-bundle": "^5.",
-        "symfony/console": "~4.4",
-        "symfony/framework-bundle": "~4.4",
-        "symfony/http-client": "~4.4",
+        "rebolon/api-json-param-converter": "^2.0",
+        "sensio/framework-extra-bundle": "^5.5",
+        "symfony/console": "~5.0",
+        "symfony/framework-bundle": "~5.0",
+        "symfony/http-client": "~5.0",
         "symfony/monolog-bundle": "^3.5",
-        "symfony/panther": "^0.7.0",
+        "symfony/panther": "^0.7",
         "symfony/profiler-pack": "~1.0",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "~4.4",
+        "symfony/yaml": "~5.0",
         "webonyx/graphql-php": "^0.13"
     },
     "require-dev": {
@@ -31,22 +31,16 @@
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "~6.0",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "~4.4",
-        "symfony/css-selector": "~4.4",
-        "symfony/dom-crawler": "~4.4",
-        "symfony/dotenv": "~4.4",
+        "symfony/browser-kit": "~5.0",
+        "symfony/css-selector": "~5.0",
+        "symfony/dom-crawler": "~5.0",
+        "symfony/dotenv": "~5.0",
         "symfony/flex": "^1.6",
         "symfony/maker-bundle": "^1.14",
         "symfony/test-pack": "^1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "repositories": [
-        {
-            "type": "vcs",
-            "url":  "git@github.com:Rebolon/api-pack.git"
-        }
-    ],
     "config": {
         "preferred-install": {
             "*": "dist"
@@ -85,7 +79,8 @@
     "extra": {
         "symfony": {
             "id": "01BXPDHBAP11MNR97CR7E97D3F",
-            "allow-contrib": false
+            "allow-contrib": false,
+            "require": "5.*"
         }
     }
 }
