Add Typescript models from ApiPlatform generator
Update Symfony to 5.1*
Use TemplateController when possible
DataProvider now use decorated original DataProvider

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -29,7 +29,7 @@ api_platform:
     exception_to_status:
         # The 2 following handlers are registered by default, keep those lines to prevent unexpected side effects
         Symfony\Component\Serializer\Exception\ExceptionInterface: 400 # Use a raw status code (recommended)
-        ApiPlatform\Core\Exception\InvalidArgumentException: 'HTTP_BAD_REQUEST' # Or a `Symfony\Component\HttpFoundation\Response`'s constant
+        ApiPlatform\Core\Exception\InvalidArgumentException: 400 #!php/const Symfony\Component\HttpFoundation\Response::HTTP_BAD_REQUEST # Or a `Symfony\Component\HttpFoundation\Response`'s constant
         ApiPlatform\Core\Exception\ItemNotFoundException: 404
         Symfony\Component\HttpKernel\Exception\NotFoundHttpException: 404
         Symfony\Component\HttpKernel\Exception\UnauthorizedHttpException: 403
