--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,12 @@
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='s$cretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
+
+###> symfony/phpunit-bridge ###
+SYMFONY_PHPUNIT_VERSION=8
+###< symfony/phpunit-bridge ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/test.db
+###< doctrine/doctrine-bundle ###
+
