--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,20 +2,27 @@ security:
     encoders:
         # @todo should use password encoding, more info here: https://symfony.com/doc/current/security.html#c-encoding-the-user-s-password
         Symfony\Component\Security\Core\User\User: plaintext
+
     # https://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
+#        InMemory provider is just for testing purpose but it lacks id and a lot of other thing that prevent from using this with a real User like we could use in database. If you still want to play with, just replace `provider: app_user_provider` by `provider: in_memory` everywhere in this file
         in_memory:
             memory:
                 users:
-                    test_php:
-                        password:           test
-                        roles:              ROLE_USER
-                    test_js:
-                        password:           test
-                        roles:              ROLE_USER
                     admin:
-                        password:           admin
-                        roles:              [ROLE_USER, ROLE_ADMIN]
+                        password: admin
+                        roles:    [ ROLE_USER, ROLE_ADMIN ]
+                    test_php:
+                        password: test
+                        roles:    ROLE_USER
+                    test_js:
+                        password: test
+                        roles:    ROLE_USER
+
+    role_hierarchy:
+        ROLE_ADMIN: [ ROLE_USER ]
+
+# for authenticating user using Api Key
 #        api_key_user_provider:
 #            id: App\Security\ApiKeyUserProvider
 
@@ -39,8 +46,8 @@ security:
         # it could be merged with previous firewall taking care of pattern
         security_jwt:
             pattern: ^/(demo/security/login/jwt|demo/form|api)
-            anonymous: ~
             stateless:  true
+            anonymous: ~
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
@@ -49,7 +56,7 @@ security:
         security_json:
             pattern: ^/(demo/security/login/json|token)
             anonymous: ~
-            #share context with other firewalls (but needs to be statefull so don't use it with sull SPA)
+            #share context with other firewalls (but needs to be statefull so don't use it with full SPA)
             context: statefull_security
             # this guard solve this issue: https://github.com/symfony/symfony/issues/25806
             guard:
