--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,15 +12,16 @@
 >
     <php>
         <ini name="error_reporting" value="-1" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak"/>
+        <env name="ENABLE_FUNCTIONAL_TESTS" value="1"/>
         <env name="KERNEL_CLASS" value="App\Kernel" />
         <env name="APP_DEBUG" value="1" />
         <!--env name="APP_ENV" value="test" /-->
         <!--env name="APP_SECRET" value="s$cretf0rt3st" /-->
         <env name="SHELL_VERBOSITY" value="-1" />
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
+
         <!-- define your env variables for the test env here -->
-        <env name="FIXTURES_DATABASE_URL" value="sqlite:///%kernel.project_dir%/var/data/fixtures.db" />
-        <!--env name="DATABASE_URL" value="sqlite:///%kernel.project_dir%/var/data/test.db" /-->
 
         <!-- ###+ nelmio/cors-bundle ### -->
         <env name="CORS_ALLOW_ORIGIN" value="^https?://localhost:?[0-9]*$"/>
@@ -39,13 +40,6 @@
         <!-- env name="TRUSTED_PROXIES" value="127.0.0.1,127.0.0.2" -->
         <!-- env name="TRUSTED_HOSTS" value="'^localhost|example\.com$'" -->
         <!-- ###- symfony/framework-bundle ### -->
-
-        <!-- ###+ doctrine/doctrine-bundle ### -->
-        <!-- Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url -->
-        <!-- For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db" -->
-        <!-- Configure your db driver and server_version in config/packages/doctrine.yaml -->
-        <env name="DATABASE_URL" value="sqlite:///%kernel.project_dir%/var/data/test.db" />
-        <!-- ###- doctrine/doctrine-bundle ### -->
     </php>
 
     <testsuites>
