Update to Sf 5.2
Add Collection Entity

--- a/.env.test
+++ b/.env.test
@@ -11,3 +11,6 @@ SYMFONY_PHPUNIT_VERSION=8
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/test.db
 ###< doctrine/doctrine-bundle ###
 
+###> symfony/panther ###
+#PANTHER_CHROME_DRIVER_BINARY=
+###< symfony/panther ###
