--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
-dist: trusty
+dist: bionic
 sudo: required
 
 addons:
   chrome: stable
   firefox: latest
-  apt:
-    sources:
-     - google-chrome
-    packages:
-     - google-chrome-stable fluxbox
   #sourceclear addons, take care it requires fees
   #srcclr: true
 #  apt:
@@ -22,22 +17,23 @@ env:
 
 language: php
 php:
-  - 7.2
+  - 7.4
 
 before_install:
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
   - sudo add-apt-repository -y ppa:ondrej/php
   - sudo add-apt-repository -y ppa:ondrej/nginx-mainline
   - sudo apt-get update
   - sudo apt-get install nginx
-  - sudo apt-get install php7.1-fpm
+  - sudo apt-get install php7.4-fpm
   - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
   - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.d/www.conf
   - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
   - sudo cp var/travis/nginx.conf /etc/nginx/sites-available/$SERVER_HOST_WEB.conf
   - sudo ln -s /etc/nginx/sites-available/$SERVER_HOST_WEB /etc/nginx/sites-enabled/
-  - nvm install 8.9.0
-  - nvm use 8.9.0
+  - nvm install 15
+  - nvm use 15
 # see http://devexpress.github.io/testcafe/documentation/recipes/integrating-testcafe-with-ci-systems/travis.html
   - stty cols 80
 
