--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "jwt-init:w": "echo 'Use the same passphrase that is your .env file' && mkdir -p config\\jwt && npm run jwt-generation:win && npm run jwt-generation-test:win",
         "jwt-generation": "cd config/jwt && openssl genrsa -out private.pem -aes256 4096 && openssl rsa -pubout -in private.pem -out public.pem && cd ../..",
         "jwt-generation:w": "cd config\\jwt && openssl genrsa -out private.pem -aes256 4096 && openssl rsa -pubout -in private.pem -out public.pem && cd ..\\..",
-        "jwt-generation-test": "echo 'Certificates generation for tests, use the following passphrase: test' && mkdir -p var/jwt-test && cp var/travis/jwt-test/* var/cache/config/jwt-test",
-        "jwt-generation-test:w": "echo 'Certificates generation for tests, use the following passphrase: test' && cd var\\\\cache && mkdir config\\\\jwt-test && cd ..\\\\.. && cp var/travis/jwt-test/* var/jwt-test",
+        "jwt-generation-test": "echo 'Certificates generation for tests, use the following passphrase: test' && mkdir -p var/cache/config/jwt-test && cp var/travis/jwt-test/* var/cache/config/jwt-test",
+        "jwt-generation-test:w": "echo 'Certificates generation for tests, use the following passphrase: test' && cd var\\\\cache && mkdir config\\\\jwt-test && cd ..\\\\.. && cp var/travis/jwt-test/* var/cache/config/jwt-test",
         "dump-js-config": "rm assets/js/config.js -f && $npm_package_config_php bin/console app:dump-js-config $npm_package_config_server_host_web $npm_package_config_server_port_web $npm_package_config_quasar_style",
         "dump-js-config:w": "rm assets/js/config.js -f && %npm_package_config_php% bin/console app:dump-js-config %npm_package_config_server_host_web% %npm_package_config_server_port_web% %npm_package_config_quasar_style%",
         "sf-dev": "echo 'you should use nginx/apache server, read the README' && $npm_package_config_php -S $npm_package_config_server_host_web:$npm_package_config_server_port_web -t public",
