--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "friendsofphp/php-cs-fixer": "^2.16",
+        "justinrainbow/json-schema": "^5.2",
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "~6.0",
         "squizlabs/php_codesniffer": "^3.5",
